logs/dag_id=dag_with_postgres_operator/run_id=manual__2024-03-09T163749.375263+0000/task_id=create_tables/attempt=1.log
[2024-03-09T16:37:51.344+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_with_postgres_operator.create_tables manual__2024-03-09T16:37:49.375263+00:00 [queued]>
[2024-03-09T16:37:51.379+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_with_postgres_operator.create_tables manual__2024-03-09T16:37:49.375263+00:00 [queued]>
[2024-03-09T16:37:51.380+0000] {taskinstance.py:2193} INFO - Starting attempt 1 of 6
[2024-03-09T16:37:51.444+0000] {taskinstance.py:2214} INFO - Executing <Task(PostgresOperator): create_tables> on 2024-03-09 16:37:49.375263+00:00
[2024-03-09T16:37:51.470+0000] {standard_task_runner.py:60} INFO - Started process 2631 to run task
[2024-03-09T16:37:51.493+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgres_operator', 'create_tables', 'manual__2024-03-09T16:37:49.375263+00:00', '--job-id', '253', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmpm88imhi3']
[2024-03-09T16:37:51.504+0000] {standard_task_runner.py:88} INFO - Job 253: Subtask create_tables
[2024-03-09T16:37:51.791+0000] {task_command.py:423} INFO - Running <TaskInstance: dag_with_postgres_operator.create_tables manual__2024-03-09T16:37:49.375263+00:00 [running]> on host 3b9d9f11e4f2
[2024-03-09T16:37:52.216+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='coder2j' AIRFLOW_CTX_DAG_ID='dag_with_postgres_operator' AIRFLOW_CTX_TASK_ID='create_tables' AIRFLOW_CTX_EXECUTION_DATE='2024-03-09T16:37:49.375263+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-03-09T16:37:49.375263+00:00'
[2024-03-09T16:37:52.220+0000] {sql.py:276} INFO - Executing: CREATE TABLE IF NOT EXISTS  DWH_Dim_Dates(
    [Date] date NOT NULL,
    [Year] int NOT NULL,
    Quarter int NOT NULL,
    [Month] int NOT NULL,
    [Day] int NOT NULL,
    PRIMARY KEY ([Date])
)
[2024-03-09T16:37:52.262+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-03-09T16:37:52.349+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-03-09T16:37:52.589+0000] {sql.py:457} INFO - Running statement: CREATE TABLE IF NOT EXISTS  DWH_Dim_Dates(
    [Date] date NOT NULL,
    [Year] int NOT NULL,
    Quarter int NOT NULL,
    [Month] int NOT NULL,
    [Day] int NOT NULL,
    PRIMARY KEY ([Date])
), parameters: None
[2024-03-09T16:37:52.630+0000] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 404, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 462, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "["
LINE 2:     [Date] date NOT NULL,
            ^

[2024-03-09T16:37:52.668+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgres_operator, task_id=create_tables, execution_date=20240309T163749, start_date=20240309T163751, end_date=20240309T163752
[2024-03-09T16:37:52.737+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 253 for task create_tables (syntax error at or near "["
LINE 2:     [Date] date NOT NULL,
            ^
; 2631)
[2024-03-09T16:37:52.800+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-03-09T16:37:53.086+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
